--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
     "moment": "^2.22.2",
     "pg": "^7.7.1",
-    "request": "^2.88.0"
+    "reflect-metadata": "^0.1.12",
+    "request": "^2.88.0",
+    "typeorm": "^0.2.9"
   },
   "devDependencies": {
     "@types/pg": "^7.4.11",
